--- a/public/tuiter/home.html
+++ b/public/tuiter/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Home</title>
 </head>
 <body>
     <a href="navigation.html">Back</a>
@@ -12,7 +12,50 @@
     <h2>
         Home
     </h2>
-    <img src="onga.jpg"
-         height="200px"/>
+    <img src="onga.jpg" height="48px"/>
+    <form id="textarea-whatshappening">
+        <textarea placeholder="What's Happening?"></textarea>
+    </form>
+    <select id="select-replyers">
+        <option value="EVERYONE" selected>Everyone can reply</option>
+        <option value="FOLLOWING">People you follow</option>
+        <option value="MENTIONED">Only people you mention</option>
+    </select>
+    <hr>
+    <input type="file"/>
+    <button>
+        Tuit
+    </button>
+    <hr>
+    <ul>
+        <li>
+            <a href="topic.html">Topic 123</a>
+            <br>
+            <img src="atari.png" height="48px"/>
+            <a href="profile.html">Alice</a> @alice - 2h
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+            <a href="reply.html">Reply</a> 123
+            <a href="retuit.html">Retuit</a> 234
+            <a href="like.html">Like</a> 345
+            <a href="share.html">Share</a>
+        </li>
+    </ul>
+    <ul>
+        <li>
+            <a href="topic.html">Topic 234</a>
+            <br>
+            <img src="jerry.jpg" height="48px"/>
+            <a href="profile.html">Bob</a> @bob - 4h
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+            <a href="reply.html">Reply</a> 123
+            <a href="retuit.html">Retuit</a> 234
+            <a href="like.html">Like</a> 345
+            <a href="share.html">Share</a>
+        </li>
+    </ul>
 </body>
 </html>
