--- a/public/tuiter/explore/index.html
+++ b/public/tuiter/explore/index.html
@@ -7,80 +7,101 @@
           rel="stylesheet"/>
 </head>
 <body>
+<div class="wd-wrapper">
     <div class="wd-black-background">
-        <div class="wd-search-bar">
-            &#128269 Search Tuiter
-        </div>
+            <span class="wd-search-bar">
+                &#128269 Search Tuiter
+            </span>
+            <span class="wd-gear">
+                <a href="explore_settings.html">⚙️</a>
+            </span>
     </div>
-    <div class="wd-grid-row">
-        <div class="wd-grid-link-col">
-            <a class="wd-selected-link" href="https://www.lipsum.com">For you</a>
-        </div>
-        <div class="wd-grid-link-col">
-            <a class="wd-unselected-link" href="https://www.lipsum.com">Trending</a>
-        </div>
-        <div class="wd-grid-link-col">
-            <a class="wd-unselected-link" href="https://www.lipsum.com">COVID-19</a>
-        </div>
-        <div class="wd-grid-link-col">
-            <a class="wd-unselected-link" href="https://www.lipsum.com">News</a>
-        </div>
-        <div class="wd-grid-link-col">
-            <a class="wd-unselected-link" href="https://www.lipsum.com">Sports</a>
-        </div>
-        <div class="wd-grid-link-col">
-            <a class="wd-unselected-link" href="https://www.lipsum.com">Entertainment</a>
-        </div>
-        </div>
         <div class="wd-grid-row">
-            <div class="wd-grid-full-col">
+            <div class="wd-grid-link-col">
+                <a class="wd-selected-link" href="https://www.lipsum.com">For you</a>
+            </div>
+            <div class="wd-grid-link-col">
+                <a class="wd-unselected-link" href="https://www.lipsum.com">Trending</a>
+            </div>
+            <div class="wd-grid-link-col">
+                <a class="wd-unselected-link" href="https://www.lipsum.com">COVID-19</a>
+            </div>
+            <div class="wd-grid-link-col">
+                <a class="wd-unselected-link" href="https://www.lipsum.com">News</a>
+            </div>
+            <div class="wd-grid-link-col">
+                <a class="wd-unselected-link" href="https://www.lipsum.com">Sports</a>
+            </div>
+            <div class="wd-grid-link-col">
+                <a class="wd-unselected-link" href="https://www.lipsum.com">Entertainment</a>
+            </div>
+            <div class="wd-grid-row">
+                <div class="wd-grid-full-col">
+                </div>
             </div>
         </div>
-    </div>
-    <div class ="wd-post">
-        <div class="wd-tuit-subtitle">
-            Trending in Science
+        <div class ="wd-post">
+            <div class="wd-tuit-subtitle">
+                Trending in Science
+            </div>
+            Starship
+            <div class="wd-tuit-subtitle">
+                55.5k Tuits
+            </div>
         </div>
-        Starship
-        <div class="wd-tuit-subtitle">
-            55.5k Tuits
+        <div class ="wd-post">
+            <div class="wd-tuit-subtitle">
+                Sports * Trending
+            </div>
+            Joe Rogan
+            <div class="wd-tuit-subtitle">
+                5,218 Tuits
+            </div>
         </div>
-    </div>
-    <div class ="wd-post">
-        <div class="wd-tuit-subtitle">
-            Sports * Trending
+        <div class ="wd-post">
+            <div class="wd-tuit-author">
+                The New York Times ☑️
+                <span class="wd-tuit-subtitle">
+                    * Yesterday
+                </span>
+            </div>
+            CNN's Cuomo conundrum: A star anchor with a brother in trouble.
+            <img class="wd-post-img" src="cuomo.jpg">
         </div>
-        Joe Rogan
-        <div class="wd-tuit-subtitle">
-            5,218 Tuits
+        <div class ="wd-post">
+            <div class="wd-tuit-author">
+                Bloomberg News ☑️
+                <span class="wd-tuit-subtitle">
+                    * Two Days Ago
+                </span>
+            </div>
+            Thinking about getting a booster? Read this first.
+            <img class="wd-post-img" src="covidma.png">
         </div>
-    </div>
-    <div class ="wd-post">
-        <div class="wd-tuit-author">
-            The New York Times
+        <div class ="wd-post">
+            <div class="wd-tuit-subtitle">
+                COVID-19 * LIVE
+            </div>
+            COVID-19 New and updates for Massachusetts
+            <img class="wd-post-img" src="macovid.png">
         </div>
-        CNN's Cuomo conundrum: A star anchor with a brother in trouble.
-    </div>
-    <div class ="wd-post">
-        <div class="wd-tuit-subtitle">
-            COVID-19 * LIVE
+        <div class ="wd-post">
+            <div class="wd-tuit-subtitle">
+                SUPERBOWL *** LVII
+            </div>
+            Live updates on SuperBowl LVII
+            <img class="wd-post-img" src="super_bowl_3.jpg">
         </div>
-        COVID-19 New and updates for Massachusetts
-    </div>
-    <div class ="wd-post">
-        <div class="wd-tuit-author">
-            Bloomberg News
+        <div class ="wd-post">
+            <div class="wd-tuit-subtitle">
+                Trending in United States
+            </div>
+            Wonder Bread
+            <div class="wd-tuit-subtitle">
+                1,259 Tuits
+            </div>
         </div>
-        Thinking about getting a booster? Read this first.
-    </div>
-    <div class ="wd-post">
-        <div class="wd-tuit-subtitle">
-            Trending in United States
-        </div>
-        Wonder Bread
-        <div class="wd-tuit-subtitle">
-            1,259 Tuits
-        </div>
-    </div>
+</div>
+</div>
 </body>
 </html>
