--- a/public/tuiter/explore/index.html
+++ b/public/tuiter/explore/index.html
@@ -5,6 +5,8 @@
     <title>Explore Index</title>
     <link href="index.css"
           rel="stylesheet"/>
+    <link href="../styles.css"
+          rel="stylesheet"/>
 </head>
 <body>
 <div class="wd-wrapper">
