--- a/public/tuiter/explore/index.html
+++ b/public/tuiter/explore/index.html
@@ -10,14 +10,15 @@
 </head>
 <body>
 <div class="wd-wrapper">
-    <div class="wd-black-background">
-            <span class="wd-search-bar">
-                &#128269 Search Tuiter
-            </span>
-            <span class="wd-gear">
-                <a href="explore_settings.html">⚙️</a>
-            </span>
-    </div>
+    <div class="wd-lightgray-border">
+        <div class="wd-black-background">
+                <span class="wd-search-bar">
+                    &#128269 Search Tuiter
+                </span>
+                <span class="wd-gear">
+                    <a class="wd-no-underline" href="explore_settings.html">️&#9881</a>
+                </span>
+        </div>
         <div class="wd-grid-row">
             <div class="wd-grid-link-col">
                 <a class="wd-selected-link" href="https://www.lipsum.com">For you</a>
@@ -42,7 +43,8 @@
                 </div>
             </div>
         </div>
-        <div class ="wd-post">
+    </div>
+        <div class ="wd-post-trending">
             <div class="wd-tuit-subtitle">
                 Trending in Science
             </div>
@@ -51,7 +53,7 @@
                 55.5k Tuits
             </div>
         </div>
-        <div class ="wd-post">
+        <div class ="wd-post-trending">
             <div class="wd-tuit-subtitle">
                 Sports * Trending
             </div>
@@ -61,40 +63,56 @@
             </div>
         </div>
         <div class ="wd-post">
-            <div class="wd-tuit-author">
-                The New York Times ☑️
-                <span class="wd-tuit-subtitle">
-                    * Yesterday
-                </span>
+            <div class="wd-75-pct-width">
+                <div class="wd-tuit-author">
+                    &#8469 The New York Times &#9745
+                    <span class="wd-tuit-subtitle">
+                        * Yesterday
+                    </span>
+                </div>
+                CNN's Cuomo conundrum: A star anchor with a brother in trouble.
             </div>
-            CNN's Cuomo conundrum: A star anchor with a brother in trouble.
-            <img class="wd-post-img" src="cuomo.jpg">
+            <div class="wd-post-img-wrapper">
+                <img class="wd-post-img" src="cuomo.jpg">
+            </div>
         </div>
         <div class ="wd-post">
-            <div class="wd-tuit-author">
-                Bloomberg News ☑️
-                <span class="wd-tuit-subtitle">
-                    * Two Days Ago
-                </span>
+            <div class="wd-75-pct-width">
+                <div class="wd-tuit-author">
+                    &#9775 Bloomberg News &#9745
+                    <span class="wd-tuit-subtitle">
+                        * Two Days Ago
+                    </span>
+                </div>
+                Thinking about getting a booster? Read this first.
             </div>
-            Thinking about getting a booster? Read this first.
-            <img class="wd-post-img" src="covidma.png">
+            <div class="wd-post-img-wrapper">
+                <img class="wd-post-img" src="covidma.png">
+            </div>
         </div>
         <div class ="wd-post">
-            <div class="wd-tuit-subtitle">
-                COVID-19 * LIVE
+            <div class="wd-75-pct-width">
+                <div class="wd-tuit-subtitle">
+                    COVID-19 * LIVE
+                </div>
+                COVID-19 New and updates for Massachusetts
             </div>
-            COVID-19 New and updates for Massachusetts
-            <img class="wd-post-img" src="macovid.png">
+            <div class="wd-post-img-wrapper">
+                <img class="wd-post-img" src="macovid.png">
+            </div>
         </div>
         <div class ="wd-post">
-            <div class="wd-tuit-subtitle">
-                SUPERBOWL *** LVII
+            <div class="wd-75-pct-width">
+                <div class="wd-tuit-subtitle">
+                    SUPERBOWL *** LVII
+                </div>
+                Live updates on SuperBowl LVII
             </div>
-            Live updates on SuperBowl LVII
-            <img class="wd-post-img" src="super_bowl_3.jpg">
+            <div class="wd-post-img-wrapper">
+                <img class="wd-post-img" src="super_bowl_3.jpg">
+            </div>
         </div>
-        <div class ="wd-post">
+        <div class ="wd-post-trending">
             <div class="wd-tuit-subtitle">
                 Trending in United States
             </div>
