--- a/public/tuiter/bookmarks/index.html
+++ b/public/tuiter/bookmarks/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+<div class="wd-black-background">
+    <div class="wd-lightgray-border-pd">
     <div class="wd-lightgray-border">
       <div class="wd-black-background">
             <div class="wd-title">
@@ -18,6 +20,7 @@
             <div class="wd-handle">
               @WebDev
             </div>
+      </div>
       </div>
         <div class="wd-lightgray-border">
             <div class="wd-container">
@@ -164,5 +167,6 @@
             </div>
         </div>
     </div>
+</div>
 </body>
 </html>
