--- a/public/labs/a4/index.html
+++ b/public/labs/a4/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>A4 Lab</title>
-    <link href="../../vendors/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
-</head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
+          rel="stylesheet"/></head>
 <body>
-
+<body>
+    <div class="container">
+        <h1>Bootstrap</h1>
+        <p>Welcome to Bootstrap!</p>
+        <!-- main content goes here -->
+    </div>
+</body>
 </body>
 </html>
