--- a/public/tuiter/explore/index.html
+++ b/public/tuiter/explore/index.html
@@ -2,126 +2,224 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Explore Index</title>
-    <link href="index.css"
+    <title>A4 Explore with Bootstrap</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
+          rel="stylesheet"/></head>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
           rel="stylesheet"/>
-    <link href="../styles.css"
-          rel="stylesheet"/>
+    <link href="index.css" rel="stylesheet"/>
 </head>
 <body>
-<div class="wd-wrapper">
-    <div class="wd-lightgray-border">
-        <div class="wd-black-background">
-                <span class="wd-search-bar">
-                    &#128269 Search Tuiter
-                </span>
-                <span class="wd-gear">
-                    <a class="wd-no-underline" href="explore_settings.html">️&#9881</a>
-                </span>
+
+<div class="container mt-3">
+    <div class="row">
+        <div class="col">
+            <div class="list-group">
+                <a href="#" class="list-group-item list-group-item-action">
+                    <i class="fab fa-twitter"></i></a>
+                <a href="#" class="list-group-item list-group-item-action">
+                    <i class="fas fa-home"></i> Home
+                </a>
+                <a href="./index.html" class="list-group-item list-group-item-action active">
+                    <i class="fas fa-hashtag"></i> Explore</a>
+                <a href="#" class="list-group-item list-group-item-action">
+                    <i class="fas fa-bell"></i> Notifications</a>
+                <a href="#" class="list-group-item list-group-item-action">
+                    <i class="fas fa-envelope"></i> Messages</a>
+                <a href="#" class="list-group-item list-group-item-action">
+                    <i class="fas fa-bookmark"></i> Bookmarks</a>
+                <a href="#" class="list-group-item list-group-item-action">
+                    <i class="fas fa-list"></i> Lists</a>
+                <a href="#" class="list-group-item list-group-item-action">
+                    <i class="fas fa-user"></i> Profile</a>
+                <a href="#" class="list-group-item list-group-item-action">
+                    <i class="fas fa-dot-circle"></i> More</a>
+                <button class="btn btn-primary btn-rounded align-self-center btn-tweet fw-bold mt-2">Tweet</button>
+            </div>
         </div>
-        <div class="wd-grid-row">
-            <div class="wd-grid-link-col">
-                <a class="wd-selected-link" href="https://www.lipsum.com">For you</a>
-            </div>
-            <div class="wd-grid-link-col">
-                <a class="wd-unselected-link" href="https://www.lipsum.com">Trending</a>
-            </div>
-            <div class="wd-grid-link-col">
-                <a class="wd-unselected-link" href="https://www.lipsum.com">COVID-19</a>
-            </div>
-            <div class="wd-grid-link-col">
-                <a class="wd-unselected-link" href="https://www.lipsum.com">News</a>
-            </div>
-            <div class="wd-grid-link-col">
-                <a class="wd-unselected-link" href="https://www.lipsum.com">Sports</a>
-            </div>
-            <div class="wd-grid-link-col">
-                <a class="wd-unselected-link" href="https://www.lipsum.com">Entertainment</a>
-            </div>
-            <div class="wd-grid-row">
-                <div class="wd-grid-full-col">
+
+        <div class="col-6">
+            <div id="main-content">
+                <div class="search-bar">
+                    <div class="col-sm-10 search-bar">
+                        <input type="text"
+                               class="form-control"
+                               id="email1"
+                               value="Search Tuiter">
+                    </div>
                 </div>
+                <ul class="nav nav-tabs mt-2">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">For you</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Trending</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">News</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Sports</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Entertainment</a>
+                    </li>
+                </ul>
+                <img class="img-fluid mt-2" src="../../images/starship.jpg">
+                <div class="list-group">
+                    <a href="#" class="list-group-item list-group-item-action d-flex flex-row justify-content-between">
+                        <div>
+                            <div>
+                                Web Development
+                            </div>
+                            <div>
+                                <span class="fw-bold">
+                                    ReactJS <i class="fas fa-check-circle"></i>
+                                </span>
+                                    <span>
+                                    - 2h
+                                </span>
+                            </div>
+                            <div class="fw-bold">
+                                React.js is a component based front end library that makes it very easy to build Single Page Applications or SPAs.
+                            </div>
+                        </div>
+                        <img class="img-post align-self-center" src="../../images/react.png">
+                    </a>
+                    <a href="#" class="list-group-item list-group-item-action d-flex flex-row justify-content-between">
+                        <div>
+                            <div>
+                                <span class="fw-bold">
+                                    JavaScript <i class="fas fa-check-circle"></i>
+                                </span>
+                                <span>
+                                    - 2h
+                                </span>
+                            </div>
+                            <div class="fw-bold">
+                                JavaScript is a programming language that can run on browsers as well as desktops.
+                            </div>
+                            <div>
+                                123k Tweets
+                            </div>
+                        </div>
+                        <img class="img-post align-self-center" src="../../images/javascript.png">
+                    </a>
+                    <a href="#" class="list-group-item list-group-item-action d-flex flex-row justify-content-between">
+                        <div>
+                            <div>
+                                Web Development
+                            </div>
+                            <div>
+                                <span class="fw-bold">
+                                    jQuery <i class="fas fa-check-circle"></i>
+                                </span>
+                            </div>
+                            <div>
+                                123k Tweets
+                            </div>
+                        </div>
+                        <img class="img-post align-self-center" src="../../images/jquery.png">
+                    </a>
+                    <a href="#" class="list-group-item list-group-item-action d-flex flex-row justify-content-between">
+                        <div>
+                            <div>
+                                Web Development
+                            </div>
+                            <div>
+                                <span class="fw-bold">
+                                    NodeJS <i class="fas fa-check-circle"></i>
+                                </span>
+                                <span>
+                                    - 2h
+                                </span>
+                            </div>
+                            <div>
+                                123k Tweets
+                            </div>
+                        </div>
+                        <img class="img-post align-self-center" src="../../images/nodejs.png">
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-4">
+            <div class="list-group">
+                <span class="list-group-item list-group-item-action">Who to follow</span>
+                <a href="#" class="list-group-item list-group-item-action d-flex flex-row justify-content-between">
+                    <div class="d-flex flex-row">
+                        <img class="img-avatar" src="../../images/java.jpg">
+                        <div class="ms-3">
+                            <div class="fw-bold">
+                                Java <i class="fas fa-check-circle"></i>
+                            </div>
+                            <div>
+                                @Java
+                            </div>
+                        </div>
+                    </div>
+                    <button class="btn btn-primary btn-rounded align-self-center">Follow</button>
+                </a>
+                <a href="#" class="list-group-item list-group-item-action d-flex flex-row justify-content-between">
+                    <div class="d-flex flex-row">
+                        <img class="img-avatar" src="../../images/relspace.jpg">
+                        <div class="ms-3">
+                            <div class="fw-bold">
+                                Relativity Space <i class="fas fa-check-circle"></i>
+                            </div>
+                            <div>
+                                @relativityspace
+                            </div>
+                        </div>
+                    </div>
+                    <button class="btn btn-primary btn-rounded align-self-center">Follow</button>
+                </a>
+                <a href="#" class="list-group-item list-group-item-action d-flex flex-row justify-content-between">
+                    <div class="d-flex flex-row">
+                        <img class="img-avatar" src="../../images/virign.png">
+                        <div class="ms-3">
+                            <div class="fw-bold">
+                                Virgin Galactic <i class="fas fa-check-circle"></i>
+                            </div>
+                            <div>
+                                @virgingalactic
+                            </div>
+                        </div>
+                    </div>
+                    <button class="btn btn-primary btn-rounded align-self-center">Follow</button>
+                </a>
+                <a href="#" class="list-group-item list-group-item-action d-flex flex-row justify-content-between">
+                    <div class="d-flex flex-row">
+                        <img class="img-avatar" src="../../images/nasa.png">
+                        <div class="ms-3">
+                            <div class="fw-bold">
+                                NASA <i class="fas fa-check-circle"></i>
+                            </div>
+                            <div>
+                                @NASA
+                            </div>
+                        </div>
+                    </div>
+                    <button class="btn btn-primary btn-rounded align-self-center">Follow</button>
+                </a>
+                <a href="#" class="list-group-item list-group-item-action d-flex flex-row justify-content-between">
+                    <div class="d-flex flex-row">
+                        <img class="img-avatar" src="../../images/tesla.png">
+                        <div class="ms-3">
+                            <div class="fw-bold">
+                                Tesla <i class="fas fa-check-circle"></i>
+                            </div>
+                            <div>
+                                @Tesla
+                            </div>
+                        </div>
+                    </div>
+                    <button class="btn btn-primary btn-rounded align-self-center">Follow</button>
+                </a>
             </div>
         </div>
     </div>
-        <div class ="wd-post-trending">
-            <div class="wd-tuit-subtitle">
-                Trending in Science
-            </div>
-            Starship
-            <div class="wd-tuit-subtitle">
-                55.5k Tuits
-            </div>
-        </div>
-        <div class ="wd-post-trending">
-            <div class="wd-tuit-subtitle">
-                Sports * Trending
-            </div>
-            Joe Rogan
-            <div class="wd-tuit-subtitle">
-                5,218 Tuits
-            </div>
-        </div>
-        <div class ="wd-post">
-            <div class="wd-75-pct-width">
-                <div class="wd-tuit-author">
-                    &#8469 The New York Times &#9745
-                    <span class="wd-tuit-subtitle">
-                        * Yesterday
-                    </span>
-                </div>
-                CNN's Cuomo conundrum: A star anchor with a brother in trouble.
-            </div>
-            <div class="wd-post-img-wrapper">
-                <img class="wd-post-img" src="cuomo.jpg">
-            </div>
-        </div>
-        <div class ="wd-post">
-            <div class="wd-75-pct-width">
-                <div class="wd-tuit-author">
-                    &#9775 Bloomberg News &#9745
-                    <span class="wd-tuit-subtitle">
-                        * Two Days Ago
-                    </span>
-                </div>
-                Thinking about getting a booster? Read this first.
-            </div>
-            <div class="wd-post-img-wrapper">
-                <img class="wd-post-img" src="covidma.png">
-            </div>
-        </div>
-        <div class ="wd-post">
-            <div class="wd-75-pct-width">
-                <div class="wd-tuit-subtitle">
-                    COVID-19 * LIVE
-                </div>
-                COVID-19 New and updates for Massachusetts
-            </div>
-            <div class="wd-post-img-wrapper">
-                <img class="wd-post-img" src="macovid.png">
-            </div>
-        </div>
-        <div class ="wd-post">
-            <div class="wd-75-pct-width">
-                <div class="wd-tuit-subtitle">
-                    SUPERBOWL *** LVII
-                </div>
-                Live updates on SuperBowl LVII
-            </div>
-            <div class="wd-post-img-wrapper">
-                <img class="wd-post-img" src="super_bowl_3.jpg">
-            </div>
-        </div>
-        <div class ="wd-post-trending">
-            <div class="wd-tuit-subtitle">
-                Trending in United States
-            </div>
-            Wonder Bread
-            <div class="wd-tuit-subtitle">
-                1,259 Tuits
-            </div>
-        </div>
-</div>
 </div>
 </body>
 </html>
