--- a/public/tuiter/explore/index-challenge.html
+++ b/public/tuiter/explore/index-challenge.html
@@ -69,58 +69,108 @@
             </div>
         </div>
 
-        <div class="col-xlg-6 col-lg-6 col-md-10 col-sm-auto" id="main-content">
+        <div class="col-auto col-6" id="main-content">
             <div class="side-bordered">
-                <div class="search-bar d-flex flex-row">
+                <div class="d-flex flex-row">
                     <div class="input-group">
-                        <input class="form-control border-end-0 border rounded-pill" type="text" placeholder="     Search Twitter">
+                        <input class="form-control border-end-0 border rounded-pill search-bar" type="text" placeholder="     Search Twitter">
                         <i class="fa fa-search align-self-center search-shift-icon"></i>
                     </div>
                     <button class="btn" type="button">
-                        <i class="fas fa-cog align-self-center"></i>
+                        <i class="fas fa-cog align-self-center text-light-gray"></i>
                     </button>
                 </div>
                 <ul class="nav nav-tabs nav-tabs-borderless mt-2 pb-1 pl-2 pr-2 d-flex justify-content-between">
                     <li class="nav-item pill-bar-item-active">
-                        <a class="nav-link active pill-bar-item-active fw-bold" href="#">For you</a>
+                        <a class="nav-link active pill-bar-item-active fw-bold" href="for-you.html">For you</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link pill-bar-item" href="#">Trending</a>
+                        <a class="nav-link pill-bar-item" href="trending.html">Trending</a>
                     </li>
                     <li class="nav-item pill-bar-item">
-                        <a class="nav-link pill-bar-item" href="#">News</a>
+                        <a class="nav-link pill-bar-item" href="news.html">News</a>
                     </li>
                     <li class="nav-item pill-bar-item">
-                        <a class="nav-link pill-bar-item" href="#">Sports</a>
+                        <a class="nav-link pill-bar-item" href="sports.html">Sports</a>
                     </li>
                     <li class="nav-item pill-bar-item d-none d-md-block d-lg-block d-xl-block d-xxl-block">
-                        <a class="nav-link pill-bar-item" href="#">Entertainment</a>
+                        <a class="nav-link pill-bar-item" href="entertainment.html">Entertainment</a>
                     </li>
                 </ul>
             </div>
-            <img class="img-fluid" src="../../images/starship.jpg">
+            <img class="img-fluid" src="../../images/open.jpg">
+            <div class="img-sub-text">
+                Tennis Tournament - LIVE
+            </div>
             <span class="img-text">
-                SpaceX's Starship
+                Australian Open 2023
             </span>
             <div class="list-group suggested-posts">
                 <a href="#" class="list-group-item suggested-item list-group-item-action d-flex flex-row justify-content-between">
                     <div>
                         <div class ="text-light-gray">
-                            Web Development
+                            Politics - Trending
                         </div>
-                        <div>
-                            <span class="fw-bold">
-                                ReactJS <i class="fas fa-check-circle"></i>
-                            </span>
-                                <span class ="text-light-gray">
-                                - 2h
-                            </span>
-                        </div>
+                        <span class="fw-bold">
+                            Seizures
+                        </span>
                         <div class ="text-light-gray">
-                            React.js is a component based front end library that makes it very easy to build Single Page Applications or SPAs.
+                            4,953 Tweets
                         </div>
                     </div>
-                    <img class="img-post align-self-center" src="../../images/react.png">
+                </a>
+                <a href="#" class="list-group-item suggested-item list-group-item-action d-flex flex-row justify-content-between">
+                    <div>
+                        <span class="fw-bold">
+                            #InfinityPool
+                        </span>
+                        <div class ="text-light-gray">
+                            See the electrifying thriller Infinity Pool in theaters - if you dare!
+                        </div>
+                        <div class ="text-light-gray">
+                            <i class="fas fa-external-link-square-alt"></i>
+                            Promoted by NECN
+                        </div>
+                    </div>
+                </a>
+                <a href="#" class="list-group-item suggested-item list-group-item-action d-flex flex-row justify-content-between">
+                    <div>
+                        <div class ="text-light-gray">
+                            Sports - Trending
+                        </div>
+                        <span class="fw-bold">
+                            RIP Bean
+                        </span>
+                        <div class ="text-light-gray">
+                            18k Tweets
+                        </div>
+                    </div>
+                </a>
+                <a href="#" class="list-group-item suggested-item list-group-item-action d-flex flex-row justify-content-between">
+                    <div>
+                        <div class ="text-light-gray">
+                            Politics - Trending
+                        </div>
+                        <span class="fw-bold">
+                            Durham
+                        </span>
+                        <div class ="text-light-gray">
+                            Trending with <span class="blue-text">Barr, Barr</span>
+                        </div>
+                    </div>
+                </a>
+                <a href="#" class="list-group-item suggested-item list-group-item-action d-flex flex-row justify-content-between">
+                    <div>
+                        <div class ="text-light-gray">
+                            Trending in Business and Finance
+                        </div>
+                        <span class="fw-bold">
+                            #DirectedEvolution
+                        </span>
+                        <div class ="text-light-gray">
+                            127k Tweets
+                        </div>
+                    </div>
                 </a>
                 <a href="#" class="list-group-item suggested-item list-group-item-action d-flex flex-row justify-content-between">
                     <div>
@@ -184,6 +234,38 @@
                 <span class="list-group-item who-nav-item list-group-item-action fw-bold">Who to follow</span>
                 <a href="#" class="list-group-item who-nav-item list-group-item-action d-flex flex-row justify-content-between">
                     <div class="d-flex flex-row">
+                        <img class="img-avatar" src="../../images/neu.jpg">
+                        <div class="ms-3">
+                            <div class="fw-bold">
+                                Northeastern U. <i class="fas fa-check-circle check-blue"></i>
+                            </div>
+                            <div class ="text-light-gray">
+                                @Northeastern
+                            </div>
+                        </div>
+                    </div>
+                    <button class="btn btn-primary btn-rounded btn-follow align-self-center">Follow</button>
+                </a>
+                <a href="#" class="list-group-item who-nav-item list-group-item-action d-flex flex-row justify-content-between">
+                    <div class="d-flex flex-row">
+                        <img class="img-avatar-square" src="../../images/sports.jpg">
+                        <div class="ms-3">
+                            <div class="fw-bold">
+                                PointsBet <i class="fas fa-check-circle check-gold"></i>
+                            </div>
+                            <div class ="text-light-gray">
+                                @PointsBetUSA
+                            </div>
+                            <div class ="text-light-gray">
+                                <i class="fas fa-external-link-square-alt"></i>
+                                Promoted
+                            </div>
+                        </div>
+                    </div>
+                    <button class="btn btn-primary btn-rounded btn-follow align-self-center">Follow</button>
+                </a>
+                <a href="#" class="list-group-item who-nav-item list-group-item-action d-flex flex-row justify-content-between">
+                    <div class="d-flex flex-row">
                         <img class="img-avatar" src="../../images/java.jpg">
                         <div class="ms-3">
                             <div class="fw-bold">
@@ -194,7 +276,7 @@
                             </div>
                         </div>
                     </div>
-                    <button class="btn btn-primary btn-rounded align-self-center">Follow</button>
+                    <button class="btn btn-primary btn-rounded btn-follow align-self-center">Follow</button>
                 </a>
                 <a href="#" class="list-group-item who-nav-item list-group-item-action d-flex flex-row justify-content-between">
                     <div class="d-flex flex-row">
@@ -208,7 +290,7 @@
                             </div>
                         </div>
                     </div>
-                    <button class="btn btn-primary btn-rounded align-self-center">Follow</button>
+                    <button class="btn btn-primary btn-rounded btn-follow align-self-center">Follow</button>
                 </a>
                 <a href="#" class="list-group-item who-nav-item list-group-item-action d-flex flex-row justify-content-between">
                     <div class="d-flex flex-row">
@@ -222,37 +304,18 @@
                             </div>
                         </div>
                     </div>
-                    <button class="btn btn-primary btn-rounded align-self-center">Follow</button>
-                </a>
-                <a href="#" class="list-group-item who-nav-item list-group-item-action d-flex flex-row justify-content-between">
-                    <div class="d-flex flex-row">
-                        <img class="img-avatar" src="../../images/nasa.png">
-                        <div class="ms-3">
-                            <div class="fw-bold">
-                                NASA <i class="fas fa-check-circle check-blue"></i>
-                            </div>
-                            <div class ="text-light-gray">
-                                @NASA
-                            </div>
-                        </div>
-                    </div>
-                    <button class="btn btn-primary btn-rounded align-self-center">Follow</button>
-                </a>
-                <a href="#" class="list-group-item who-nav-item list-group-item-action d-flex flex-row justify-content-between">
-                    <div class="d-flex flex-row">
-                        <img class="img-avatar" src="../../images/tesla.png">
-                        <div class="ms-3">
-                            <div class="fw-bold">
-                                Tesla <i class="fas fa-check-circle check-blue"></i>
-                            </div>
-                            <div class ="text-light-gray">
-                                @Tesla
-                            </div>
-                        </div>
-                    </div>
-                    <button class="btn btn-primary btn-rounded align-self-center">Follow</button>
+                    <button class="btn btn-primary btn-rounded btn-follow align-self-center">Follow</button>
                 </a>
                 <a href="#" class="list-group-item blue-nav-item list-group-item-action">Show More</a>
+            </div>
+            <div class ="text-light-gray pt-2">
+                Terms of Service * Privacy Policy
+            </div>
+            <div class ="text-light-gray">
+                Accessibility * Ads info * More...
+            </div>
+            <div class ="text-light-gray">
+                2023 Twitter, Inc.
             </div>
         </div>
     </div>
