--- a/public/tuiter/explore/index-challenge.html
+++ b/public/tuiter/explore/index-challenge.html
@@ -69,7 +69,7 @@
             </div>
         </div>
 
-        <div class="col-auto col-6" id="main-content">
+        <div class="col-xlg-6 col-lg-6 col-md-10 col-sm-8 col-xsm-4" id="main-content">
             <div class="side-bordered">
                 <div class="d-flex flex-row">
                     <div class="input-group">
@@ -85,16 +85,16 @@
                         <a class="nav-link active pill-bar-item-active fw-bold" href="for-you.html">For you</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link pill-bar-item" href="trending.html">Trending</a>
+                        <a class="nav-link pill-bar-item nav-link-margins" href="trending.html">Trending</a>
                     </li>
                     <li class="nav-item pill-bar-item">
-                        <a class="nav-link pill-bar-item" href="news.html">News</a>
+                        <a class="nav-link pill-bar-item nav-link-margins" href="news.html">News</a>
                     </li>
                     <li class="nav-item pill-bar-item">
-                        <a class="nav-link pill-bar-item" href="sports.html">Sports</a>
+                        <a class="nav-link pill-bar-item nav-link-margins" href="sports.html">Sports</a>
                     </li>
                     <li class="nav-item pill-bar-item d-none d-md-block d-lg-block d-xl-block d-xxl-block">
-                        <a class="nav-link pill-bar-item" href="entertainment.html">Entertainment</a>
+                        <a class="nav-link pill-bar-item nav-link-margins" href="entertainment.html">Entertainment</a>
                     </li>
                 </ul>
             </div>
