--- a/public/tuiter/explore/index.html
+++ b/public/tuiter/explore/index.html
@@ -69,7 +69,7 @@
             </div>
         </div>
 
-        <div class="col-xlg-6 col-lg-6 col-md-10 col-sm-auto" id="main-content">
+        <div class="col-xlg-6 col-lg-6 col-md-10 col-sm-8 col-xsm-4" id="main-content">
             <div class="search-bar d-flex flex-row">
                 <div class="input-group">
                     <input class="form-control border-end-0 border rounded-pill" type="text" placeholder="     Search Twitter">
@@ -84,16 +84,16 @@
                     <a class="nav-link active" href="for-you.html">For you</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="trending.html">Trending</a>
+                    <a class="nav-link nav-link-margins" href="trending.html">Trending</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="news.html">News</a>
+                    <a class="nav-link nav-link-margins" href="news.html">News</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="sports.html">Sports</a>
+                    <a class="nav-link nav-link-margins" href="sports.html">Sports</a>
                 </li>
                 <li class="nav-item d-none d-md-block d-lg-block d-xl-block d-xxl-block">
-                    <a class="nav-link" href="entertainment.html">Entertainment</a>
+                    <a class="nav-link nav-link-margins" href="entertainment.html">Entertainment</a>
                 </li>
             </ul>
             <img class="img-fluid mt-2" src="../../images/starship.jpg">
