--- a/public/tuiter/explore/index-challenge.html
+++ b/public/tuiter/explore/index-challenge.html
@@ -108,26 +108,27 @@
             <div class="list-group suggested-posts">
                 <a href="#" class="list-group-item suggested-item list-group-item-action d-flex flex-row justify-content-between">
                     <div>
-                        <div class ="text-light-gray">
+                        <div class ="text-light-gray sub-text">
                             Politics - Trending
                         </div>
                         <span class="fw-bold">
                             Seizures
                         </span>
-                        <div class ="text-light-gray">
+                        <div class ="text-light-gray sub-text">
                             4,953 Tweets
                         </div>
                     </div>
+                    <i class="fas fa-ellipsis-h pt-1 text-light-gray sub-text"></i>
                 </a>
                 <a href="#" class="list-group-item suggested-item list-group-item-action d-flex flex-row justify-content-between">
                     <div>
                         <span class="fw-bold">
                             #InfinityPool
                         </span>
-                        <div class ="text-light-gray">
+                        <div class ="text-light-gray sub-text">
                             See the electrifying thriller Infinity Pool in theaters - if you dare!
                         </div>
-                        <div class ="text-light-gray">
+                        <div class ="text-light-gray sub-text">
                             <i class="fas fa-external-link-square-alt"></i>
                             Promoted by NECN
                         </div>
@@ -135,42 +136,45 @@
                 </a>
                 <a href="#" class="list-group-item suggested-item list-group-item-action d-flex flex-row justify-content-between">
                     <div>
-                        <div class ="text-light-gray">
+                        <div class ="text-light-gray sub-text">
                             Sports - Trending
                         </div>
                         <span class="fw-bold">
                             RIP Bean
                         </span>
-                        <div class ="text-light-gray">
+                        <div class ="text-light-gray sub-text">
                             18k Tweets
                         </div>
                     </div>
+                    <i class="fas fa-ellipsis-h pt-1 text-light-gray sub-text"></i>
                 </a>
                 <a href="#" class="list-group-item suggested-item list-group-item-action d-flex flex-row justify-content-between">
                     <div>
-                        <div class ="text-light-gray">
+                        <div class ="text-light-gray sub-text">
                             Politics - Trending
                         </div>
                         <span class="fw-bold">
                             Durham
                         </span>
-                        <div class ="text-light-gray">
+                        <div class ="text-light-gray sub-text">
                             Trending with <span class="blue-text">Barr, Barr</span>
                         </div>
                     </div>
+                    <i class="fas fa-ellipsis-h pt-1 text-light-gray sub-text"></i>
                 </a>
                 <a href="#" class="list-group-item suggested-item list-group-item-action d-flex flex-row justify-content-between">
                     <div>
-                        <div class ="text-light-gray">
+                        <div class ="text-light-gray sub-text">
                             Trending in Business and Finance
                         </div>
                         <span class="fw-bold">
                             #DirectedEvolution
                         </span>
-                        <div class ="text-light-gray">
+                        <div class ="text-light-gray sub-text">
                             127k Tweets
                         </div>
                     </div>
+                    <i class="fas fa-ellipsis-h pt-1 text-light-gray sub-text"></i>
                 </a>
                 <a href="#" class="list-group-item suggested-item list-group-item-action d-flex flex-row justify-content-between">
                     <div>
@@ -185,7 +189,7 @@
                         <div class ="text-light-gray">
                             JavaScript is a programming language that can run on browsers as well as desktops.
                         </div>
-                        <div class ="text-light-gray">
+                        <div class ="text-light-gray sub-text">
                             123k Tweets
                         </div>
                     </div>
@@ -193,7 +197,7 @@
                 </a>
                 <a href="#" class="list-group-item suggested-item list-group-item-action d-flex flex-row justify-content-between">
                     <div>
-                        <div class ="text-light-gray">
+                        <div class ="text-light-gray sub-text">
                             Web Development
                         </div>
                         <div>
@@ -201,7 +205,7 @@
                                 jQuery <i class="fas fa-check-circle"></i>
                             </span>
                         </div>
-                        <div class ="text-light-gray">
+                        <div class ="text-light-gray sub-text">
                             123k Tweets
                         </div>
                     </div>
@@ -209,18 +213,18 @@
                 </a>
                 <a href="#" class="list-group-item suggested-item-bottom list-group-item-action d-flex flex-row justify-content-between">
                     <div>
-                        <div class ="text-light-gray">
+                        <div class ="text-light-gray sub-text">
                             Web Development
                         </div>
                         <div>
                             <span class="fw-bold">
                                 NodeJS <i class="fas fa-check-circle"></i>
                             </span>
-                            <span class ="text-light-gray">
+                            <span class ="text-light-gray sub-text">
                                 - 2h
                             </span>
                         </div>
-                        <div class ="text-light-gray">
+                        <div class ="text-light-gray sub-text">
                             123k Tweets
                         </div>
                     </div>
@@ -239,7 +243,7 @@
                             <div class="fw-bold">
                                 Northeastern U. <i class="fas fa-check-circle check-blue"></i>
                             </div>
-                            <div class ="text-light-gray">
+                            <div class ="text-light-gray sub-text">
                                 @Northeastern
                             </div>
                         </div>
@@ -253,10 +257,10 @@
                             <div class="fw-bold">
                                 PointsBet <i class="fas fa-check-circle check-gold"></i>
                             </div>
-                            <div class ="text-light-gray">
+                            <div class ="text-light-gray sub-text">
                                 @PointsBetUSA
                             </div>
-                            <div class ="text-light-gray">
+                            <div class ="text-light-gray sub-text">
                                 <i class="fas fa-external-link-square-alt"></i>
                                 Promoted
                             </div>
@@ -271,7 +275,7 @@
                             <div class="fw-bold">
                                 Java <i class="fas fa-check-circle check-blue"></i>
                             </div>
-                            <div class ="text-light-gray">
+                            <div class ="text-light-gray sub-text">
                                 @Java
                             </div>
                         </div>
@@ -285,7 +289,7 @@
                             <div class="fw-bold">
                                 Relativity Space <i class="fas fa-check-circle check-blue"></i>
                             </div>
-                            <div class ="text-light-gray">
+                            <div class ="text-light-gray sub-text">
                                 @relativityspace
                             </div>
                         </div>
@@ -299,7 +303,7 @@
                             <div class="fw-bold">
                                 Virgin Galactic <i class="fas fa-check-circle check-blue"></i>
                             </div>
-                            <div class ="text-light-gray">
+                            <div class ="text-light-gray sub-text">
                                 @virgingalactic
                             </div>
                         </div>
@@ -308,13 +312,13 @@
                 </a>
                 <a href="#" class="list-group-item blue-nav-item list-group-item-action">Show More</a>
             </div>
-            <div class ="text-light-gray pt-2">
+            <div class ="text-light-gray pt-2 sub-text">
                 Terms of Service * Privacy Policy
             </div>
-            <div class ="text-light-gray">
+            <div class ="text-light-gray sub-text">
                 Accessibility * Ads info * More...
             </div>
-            <div class ="text-light-gray">
+            <div class ="text-light-gray sub-text">
                 2023 Twitter, Inc.
             </div>
         </div>
