changed for you text to be black

--- a/public/tuiter/explore/index-challenge.html
+++ b/public/tuiter/explore/index-challenge.html
@@ -81,8 +81,8 @@
                     </button>
                 </div>
                 <ul class="nav nav-tabs nav-tabs-borderless mt-2 pb-1 pl-2 pr-2 d-flex justify-content-between">
-                    <li class="nav-item pill-bar-item-active">
-                        <a class="nav-link active pill-bar-item-active fw-bold" href="for-you.html">For you</a>
+                    <li class="nav-item">
+                        <a class="nav-link active fw-bold text-black" href="for-you.html">For you</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link pill-bar-item nav-link-margins" href="trending.html">Trending</a>
