updated more icon

--- a/public/tuiter/explore/index-challenge.html
+++ b/public/tuiter/explore/index-challenge.html
@@ -61,7 +61,7 @@
                 </a>
                 <a href="#" class="list-group-item nav-bar-item list-group-item-action">
                     <div class="d-flex">
-                        <i class="fas fa-dot-circle align-self-center"></i>
+                        <i class="far fa-dot-circle align-self-center"></i>
                         <span class="d-none d-xl-block d-xxl-block">&nbsp;More</span>
                     </div>
                 </a>
