--- a/public/tuiter/navigation.html
+++ b/public/tuiter/navigation.html
@@ -8,7 +8,7 @@
   <h3>Navigation</h3>
   <ul>
     <li><a href="home.html">Home</a></li>
-    <li><a href="./explore/index.html">Explore - Standard</a></li>
+    <li><a href="explore/index-a4.html">Explore - Standard</a></li>
     <li><a href="./explore/index-challenge.html">Explore - CHALLENGE</a></li>
     <li><a href="notifications.html">Notifications</a></li>
     <li><a href="messages.html">Messages</a></li>
