refactored old image locations to public

--- a/public/tuiter/edit-profile.html
+++ b/public/tuiter/edit-profile.html
@@ -9,11 +9,11 @@
 <h1>Tuiter</h1>
 <h2>Edit Profile</h2>
   <a href="profile.html">Save</a>
-  <img src="space.jpg" height="200px" width="100%"/>
+  <img src="../images/space.jpg" height="200px" width="100%"/>
   <br/>
   <input type="file"/>
   <br>
-  <img src="onga.jpg" height="48px"/>
+  <img src="../images/onga.jpg" height="48px"/>
   <br>
   <input type="file"/>
   <hr>
