--- a/public/tuiter/explore/index-a3.html
+++ b/public/tuiter/explore/index-a3.html
@@ -73,7 +73,7 @@
                 CNN's Cuomo conundrum: A star anchor with a brother in trouble.
             </div>
             <div class="wd-post-img-wrapper">
-                <img class="wd-post-img" src="cuomo.jpg">
+                <img class="wd-post-img" src="/public/images/cuomo.jpg">
             </div>
         </div>
         <div class ="wd-post">
@@ -87,7 +87,7 @@
                 Thinking about getting a booster? Read this first.
             </div>
             <div class="wd-post-img-wrapper">
-                <img class="wd-post-img" src="covidma.png">
+                <img class="wd-post-img" src="/public/images/covidma.png">
             </div>
         </div>
         <div class ="wd-post">
@@ -98,7 +98,7 @@
                 COVID-19 New and updates for Massachusetts
             </div>
             <div class="wd-post-img-wrapper">
-                <img class="wd-post-img" src="macovid.png">
+                <img class="wd-post-img" src="/public/images/macovid.png">
             </div>
         </div>
         <div class ="wd-post">
@@ -109,7 +109,7 @@
                 Live updates on SuperBowl LVII
             </div>
             <div class="wd-post-img-wrapper">
-                <img class="wd-post-img" src="super_bowl_3.jpg">
+                <img class="wd-post-img" src="/public/images/super_bowl_3.jpg">
             </div>
         </div>
         <div class ="wd-post-trending">
