--- a/public/tuiter/tuit.html
+++ b/public/tuiter/tuit.html
@@ -12,7 +12,7 @@
   <h2>
     Tuit
   </h2>
-  <img src="onga.jpg" height="48px"/>
+  <img src="../images/onga.jpg" height="48px"/>
   <form id="textarea-whatshappening">
     <textarea placeholder="What's Happening?"></textarea>
   </form>
