--- a/public/tuiter/home.html
+++ b/public/tuiter/home.html
@@ -12,7 +12,7 @@
     <h2>
         Home
     </h2>
-    <img src="onga.jpg" height="48px"/>
+    <img src="/public/images/onga.jpg" height="48px"/>
     <form id="textarea-whatshappening">
         <textarea placeholder="What's Happening?"></textarea>
     </form>
@@ -31,7 +31,7 @@
         <li>
             <a href="topic.html">Topic 123</a>
             <br>
-            <img src="atari.png" height="48px"/>
+            <img src="/public/images/atari.png" height="48px"/>
             <a href="profile.html">Alice</a> @alice - 2h
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
@@ -46,7 +46,7 @@
         <li>
             <a href="topic.html">Topic 234</a>
             <br>
-            <img src="jerry.jpg" height="48px"/>
+            <img src="/public/images/jerry.jpg" height="48px"/>
             <a href="profile.html">Bob</a> @bob - 4h
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
