--- a/public/tuiter/profile.html
+++ b/public/tuiter/profile.html
@@ -8,8 +8,8 @@
   <a href="navigation.html">Back</a>
   <h1>Tuiter</h1>
   <h2>Profile</h2>
-  <img src="space.jpg" height="200px" width="100%"/>
-  <img src="onga.jpg" height="48px"/>
+  <img src="../images/space.jpg" height="200px" width="100%"/>
+  <img src="../images/onga.jpg" height="48px"/>
   <a href="edit-profile.html">Edit Profile</a>
     <h2>
         WebDev
