Added explore A5 link

--- a/public/tuiter/navigation.html
+++ b/public/tuiter/navigation.html
@@ -8,8 +8,9 @@
   <h3>Navigation</h3>
   <ul>
     <li><a href="home.html">Home</a></li>
-    <li><a href="explore/index-a4.html">Explore - Standard</a></li>
-    <li><a href="./explore/index-challenge.html">Explore - CHALLENGE</a></li>
+    <li><a href="explore/index.html">Explore - A5</a></li>
+<!--    <li><a href="explore/index-a4.html">Explore - Standard</a></li>-->
+<!--    <li><a href="./explore/index-challenge.html">Explore - CHALLENGE</a></li>-->
     <li><a href="notifications.html">Notifications</a></li>
     <li><a href="messages.html">Messages</a></li>
     <li><a href="bookmarks.html">Bookmarks</a></li>
